// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get add auth request adaptor translates request with aliasAttributes 1`] = `
Object {
  "adminQueries": false,
  "adminQueryGroup": undefined,
  "aliasAttributes": Array [
    "email",
    "phone_number",
    "preferred_username",
  ],
  "authProviders": Array [],
  "authSelections": "userPoolOnly",
  "autoVerifiedAttributes": Array [],
  "identityPoolName": undefined,
  "mfaConfiguration": "OFF",
  "requiredAttributes": Array [
    "email",
  ],
  "resourceName": "myTestAuth",
  "serviceName": "Cognito",
  "thirdPartyAuth": false,
  "updateFlow": "manual",
  "useDefault": "manual",
  "userPoolGroupList": Array [],
  "userPoolGroups": false,
  "userPoolName": undefined,
  "usernameAttributes": Array [
    "email",
  ],
  "userpoolClientReadAttributes": Array [],
  "userpoolClientRefreshTokenValidity": undefined,
  "userpoolClientWriteAttributes": Array [],
}
`;

exports[`get add auth request adaptor translates request without aliasAttributes 1`] = `
Object {
  "adminQueries": false,
  "adminQueryGroup": undefined,
  "aliasAttributes": Array [
    "email",
    "phone_number",
    "preferred_username",
  ],
  "authProviders": Array [],
  "authSelections": "userPoolOnly",
  "autoVerifiedAttributes": Array [],
  "identityPoolName": undefined,
  "mfaConfiguration": "OFF",
  "requiredAttributes": Array [
    "email",
  ],
  "resourceName": "myTestAuth",
  "serviceName": "Cognito",
  "thirdPartyAuth": false,
  "updateFlow": "manual",
  "useDefault": "manual",
  "userPoolGroupList": Array [],
  "userPoolGroups": false,
  "userPoolName": undefined,
  "usernameAttributes": Array [
    "email",
  ],
  "userpoolClientReadAttributes": Array [],
  "userpoolClientRefreshTokenValidity": undefined,
  "userpoolClientWriteAttributes": Array [],
}
`;

exports[`get add auth request adaptor valid translations translates request with minimal user pool config only 1`] = `
Object {
  "adminQueries": false,
  "adminQueryGroup": undefined,
  "aliasAttributes": Array [],
  "authProviders": Array [],
  "authSelections": "userPoolOnly",
  "autoVerifiedAttributes": Array [],
  "identityPoolName": undefined,
  "mfaConfiguration": "OFF",
  "requiredAttributes": Array [
    "email",
  ],
  "resourceName": "myTestAuth",
  "serviceName": "Cognito",
  "thirdPartyAuth": false,
  "updateFlow": "manual",
  "useDefault": "manual",
  "userPoolGroupList": Array [],
  "userPoolGroups": false,
  "userPoolName": undefined,
  "usernameAttributes": Array [
    "email",
  ],
  "userpoolClientReadAttributes": Array [],
  "userpoolClientRefreshTokenValidity": undefined,
  "userpoolClientWriteAttributes": Array [],
}
`;

exports[`get update auth request adaptor valid translations translates empty oAuth config into hostedUI: false 1`] = `
Object {
  "adminQueries": false,
  "adminQueryGroup": undefined,
  "authProviders": Array [],
  "authSelections": "userPoolOnly",
  "autoVerifiedAttributes": Array [],
  "hostedUI": false,
  "mfaConfiguration": "OFF",
  "requiredAttributes": Array [
    "required_attribute",
  ],
  "serviceName": "Cognito",
  "thirdPartyAuth": false,
  "updateFlow": "manual",
  "useDefault": "manual",
  "userPoolGroupList": Array [],
  "userPoolGroups": false,
  "userpoolClientReadAttributes": Array [],
  "userpoolClientRefreshTokenValidity": undefined,
  "userpoolClientWriteAttributes": Array [],
}
`;
